objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Company_Account_Name__c</fullName>
        <formula>IF(ISBLANK( Contact.Account.Name ),  Lead.Company , Contact.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company/Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Farm_VIP_Attended_Date__c</fullName>
        <formula>Contact.FARM_VIP_Attended_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact || Farm VIP Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Farm_VIP_Newsletter__c</fullName>
        <formula>IF ( INCLUDES ( Contact.Newsletters__c , &quot;Farm VIP Cattle&quot; ), &quot;Farm VIP Cattle; &quot;,null ) &amp; 
IF ( INCLUDES ( Contact.Newsletters__c , &quot;Farm VIP Companion&quot; ), &quot;Farm VIP Companion; &quot;,null ) &amp; 
IF ( INCLUDES ( Contact.Newsletters__c , &quot;Farm VIP Dairy&quot; ), &quot;Farm VIP Dairy; &quot;,null ) &amp; 
IF ( INCLUDES ( Contact.Newsletters__c , &quot;Farm VIP Education/Training&quot; ), &quot;Farm VIP Education/Training; &quot;,null ) &amp; 
IF ( INCLUDES ( Contact.Newsletters__c , &quot;Farm VIP Horse&quot; ), &quot;Farm VIP Horse; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;Farm VIP Show&quot; ),  &quot;Farm VIP Show; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;Farm VIP Swine&quot; ), &quot;Farm VIP Swine; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;HERDSMART&quot; ), &quot;HERDSMART; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;NSM 2016 Group A&quot; ), &quot;NSM 2016 Group A; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;NSM 2016 Group B&quot; ), &quot;NSM 2016 Group B; &quot;,null )&amp;
IF ( INCLUDES ( Contact.Newsletters__c  , &quot;Mazuri&quot; ), &quot;Mazuri; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact || Farm VIP Newsletter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Farm_VIP_Specie_Focus__c</fullName>
        <formula>text(Contact.Farm_VIP_Species_Focus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact || Farm VIP Specie Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Newsletter__c</fullName>
        <description>If the Newsletter field on the contact is blank, then &quot;Yes&quot;, &quot;No&quot;.</description>
        <formula>IF(
isblank( Contact.Newsletters__c ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact || Newsletter is Blank Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>Text(Contact.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <formula>Text(Contact.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street_Address__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type from Contact</description>
        <formula>TEXT( Contact.Contact_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Mobile_Number__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_State__c</fullName>
        <formula>text(Contact.MailingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Zip_Code__c</fullName>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Member_Count__c</fullName>
        <formula>if(
isnull( x18_Digit_Campaign_Member_ID__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farm_VIP_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Farm VIP Event Registration tied to Campaign Member</description>
        <label>Farm VIP Registration</label>
        <referenceTo>Farm_VIP_Registration__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLR_Large_Herd_Initative__c</fullName>
        <formula>If(Includes(Contact.Account.Initiative__c, &quot;GLR Large Herd Initiative&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLR Large Herd Initative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Farm_VIP_Attended_Date__c</fullName>
        <formula>Lead.FARM_VIP_Attended_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead || Farm VIP Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Farm_VIP_Specie_Focus__c</fullName>
        <formula>text(Lead.Farm_VIP_Species_Focus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead || Farm VIP Specie Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Newsletter_is_Blank_Indicator__c</fullName>
        <formula>If(
isblank(Lead.Newsletters__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead || Newsletter is Blank Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <formula>IF(ISBLANK(Contact.Email), Lead.Email, Contact.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_First_Associated_to_Campaign__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member First Associated to Campaign</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>IF(ISBLANK(Contact.LastName),Lead.FirstName + &quot; &quot; + Lead.LastName,Contact.FirstName + &quot; &quot; + Contact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Phone__c</fullName>
        <formula>IF(ISBLANK(Contact.Phone), Lead.Phone, Contact.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <formula>IF(ISBLANK(Contact.Id), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_to_Load__c</fullName>
        <formula>if(
Specie_Focus__c = &quot;Companion&quot;,&quot;Farm VIP Companion&quot;,
if(
Specie_Focus__c = &quot;Dairy&quot;,&quot;Farm VIP Dairy&quot;,
if(
Specie_Focus__c= &quot;Education &amp; Training&quot;,&quot;Farm VIP Education/Training&quot;,
If(
Specie_Focus__c = &quot;Horse&quot;,&quot;Farm VIP Horse&quot;,
If(
Specie_Focus__c = &quot;Cattle&quot;,&quot;Farm VIP Cattle&quot;,
If(
Specie_Focus__c= &quot;Swine&quot;,&quot;Farm VIP Swine&quot;,
If(
Specie_Focus__c = &quot;Show&quot;,&quot;Farm VIP Show&quot;,
&quot;???&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newsletter to Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Sales_Person_ASM__c</fullName>
        <formula>text(Farm_VIP_Registration__r.Owner:User.Area_Sales_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person ASM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Sales_Person_Full_Name__c</fullName>
        <formula>Farm_VIP_Registration__r.Owner:User.FirstName &amp;&quot; &quot;&amp;Farm_VIP_Registration__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Sales_Person_Sales_Division__c</fullName>
        <formula>Text(Farm_VIP_Registration__r.Owner:User.Sales_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Sales_Person_Sales_Region__c</fullName>
        <formula>Text( Farm_VIP_Registration__r.Owner:User.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Mtg_Campaign_Group__c</fullName>
        <label>Sales Mtg Campaign Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group A</fullName>
                </value>
                <value>
                    <fullName>Group B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_Email__c</fullName>
        <formula>Sales_Person_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact record used to identify a Sales Rep</description>
        <label>Sales Person Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Phone__c</fullName>
        <formula>Sales_Person_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specie_Focus__c</fullName>
        <formula>Text(Campaign.Specie_Focus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specie Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPHost_Mobile__c</fullName>
        <description>Nominating Sales Person Mobile Phone</description>
        <formula>Farm_VIP_Registration__r.Owner:User.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPNominating_Sales_Person_First_Name__c</fullName>
        <description>First name of Sales Person Nominating</description>
        <formula>Farm_VIP_Registration__r.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPNominating_Sales_Person_Last_Name__c</fullName>
        <description>Last name of nominating sales person</description>
        <formula>Farm_VIP_Registration__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPNominating_Sales_Person_Role__c</fullName>
        <description>Role of the Nominating Sales Person</description>
        <formula>Farm_VIP_Registration__r.Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nominating Sales Person Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPNotes_from_Registration__c</fullName>
        <description>Value from &quot;Notes&quot; field on Farm VIP Registration record</description>
        <formula>Farm_VIP_Registration__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notes from Registration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPRequester_Email__c</fullName>
        <description>Email of the Nominating Sales Person for Farm VIP</description>
        <formula>Farm_VIP_Registration__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPRoom_With__c</fullName>
        <description>Value for &quot;Room With&quot; field from Farm VIP</description>
        <formula>Farm_VIP_Registration__r.Room_With__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPSales_Person_Nominating_Attending__c</fullName>
        <description>Value from the &quot;I will be Attending&quot; field on the Farm VIP Registration</description>
        <formula>TEXT(Farm_VIP_Registration__r.Host_will_be_attending__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Nominating Attending?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPTraveling_Via__c</fullName>
        <description>Value from the &quot;Traveling Via&quot; field on the Farm VIP Registration record</description>
        <formula>TEXT( Farm_VIP_Registration__r.Traveling_Via__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traveling Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Host_Be_Attending__c</fullName>
        <formula>Text(Farm_VIP_Registration__r.Host_will_be_attending__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will Host be Attending?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Account_ID__c</fullName>
        <formula>Contact.Account.X18_Digit_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Campaign_ID__c</fullName>
        <formula>Campaign.X18_Digit_Customer_Event_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Contact_ID__c</fullName>
        <formula>Contact.X18_Digit_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Lead_ID__c</fullName>
        <formula>Lead.X18_Digit_Lead_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Soft Bounce</fullName>
                </value>
                <value>
                    <fullName>Hard Bounce</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>x18_Digit_Campaign_Member_ID__c</fullName>
        <description>18 Digit ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Campaign Member ID</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Campaign_Member</fullName>
        <active>true</active>
        <description>Campaign Member</description>
        <label>Campaign Member</label>
    </recordTypes>
</CustomObject>